# moon-multipython-monorepo-example

./: .gitignore  .pre-commit-config.yaml  .prototools  README.md  commitlint.config.js  moon.yml  pyproject.toml
.github/workflows/: snake-lib.build.yml
.moon/: toolchain.yml  workspace.yml
.moon/hooks/: commit-msg.sh  pre-commit.sh
.moon/tasks/: python.yml
snake-lib/: .prototools  moon.yml  pyproject.toml
snake-lib/.moon/: toolchain.yml
snake-lib/src/snake_lib/: __init__.py
snake-lib/tests/: test_snake_lib.py
