[project]
name = "snake-lib"
version = "0.1.0"
description = "A python library"
readme = "README.md"
requires-python = ">=3.10.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]

[tool.uv]
python-preference = "only-system"
